# mcstatus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/src/: main.cpp
include/mcstatus/: color.hpp  domain.hpp  mcstatus.hpp  packet.hpp
src/: color.cpp  domain.cpp  mcstatus.cpp  packet.cpp
test/: CMakeLists.txt
test/src/: main.cpp
